Handle bug of Login flickering (#89)
Changes to be committed:
Handle bug of Login flickering
	new file:   client/src/components/LoginComp.js
	new file:   client/src/components/RegisterComp.js
	modified:   client/src/css/NewStyles.module.css
	modified:   client/src/main/App.js
	modified:   client/src/main/LoginModal.js
	modified:   client/src/main/RegisterModal.js

--- a/client/src/css/NewStyles.module.css
+++ b/client/src/css/NewStyles.module.css
@@ -137,3 +137,18 @@
     padding: 10px;
   }
 }
+
+/* ===============================
+   Modal Styles
+================================= */
+.modal {
+  transition: opacity 0.15s linear;
+}
+
+.modal.show {
+  opacity: 1;
+}
+
+.modal-dialog {
+  transition: transform 0.3s ease-out;
+}
